# cel-lua

./: .busted  .gitignore  .gitleaks.toml  .luacheckrc  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Makefile.old  README.md  STATUS.md  cbindgen.toml  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  format-lint.yml  memory-safety.yml  release.yml  security.yml  test.yml
docs/: PRE_COMMIT.md  RUST_PRE_COMMIT.md
examples/: basic.lua  current_capabilities.lua  demo.lua
hack/tooling/: Dockerfile  Dockerfile.dockerignore  busted-luajit  busted-resty  test-dependencies-0.1.0-0.rockspec
hack/tooling/debugger/: emmy_debugger.lua
lib/: cel.lua
lib/cel/: cdefs.lua  context.lua  program.lua
spec/: README.md  basic_spec.lua  environment_spec.lua  performance_spec.lua  program_spec.lua  run_tests.lua  test_helper.lua  variables_spec.lua
src/: lib.rs
src/ffi/: context.rs  mod.rs  program.rs
t/: 01-sanity.t
